--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,11 +3,6 @@
 // basic variables
 @import "vars";
 
-// import other partial files
-@import "partial/color";
-//@import "partial/text";
-@import "partial/icon";
-@import "partial/grid";
 
 %active-dropdown-btn {
   color: $third-text-color !important;
@@ -84,9 +79,8 @@
     @extend %active-dropdown-btn;
   }
 
-  // fix icon inner svg
-  svg {
-    width: 100%;
-    height: 100%;
+  .refresh-btn {
+    float: right;
+    padding: 2px !important;
   }
 }
