--- a/src/components/DetailCard/index.scss
+++ b/src/components/DetailCard/index.scss
@@ -1,7 +1,7 @@
 @import '~scss/vars';
 
 .detailCard {
-  width: 360px;
+  //width: 360px;
   padding: 24px;
   border-radius: 3px;
   background-color: #ffffff;
