--- a/src/components/Base/Pagination/index.scss
+++ b/src/components/Base/Pagination/index.scss
@@ -13,14 +13,14 @@
 
 :global {
   .pi-pagination {
-    margin: 0 -6px 25px;
+    margin: 16px -6px 0;
     padding: 0;
     list-style: none;
 
     &-item {
       float: left;
       width: 24px;
-      height: 24px;      
+      height: 24px;
       line-height: 24px;
       text-align: center;
       border-radius: 50%;
@@ -46,7 +46,7 @@
       }
 
       &-active {
-        font-weight: 500;        
+        font-weight: 500;
         background-color: $primary;
 
         a {
@@ -81,10 +81,10 @@
       float: left;
       width: 24px;
       height: 24px;
-      color: #999;
+      color: $N500;
       cursor: pointer;
       outline: 0;
-  
+
       &:after {
         position: absolute;
         left: 0;
@@ -94,7 +94,7 @@
         letter-spacing: 2px;
         text-align: center;
       }
-  
+
       &:focus, &:hover {
         color: $primary;
       }
@@ -111,11 +111,12 @@
         }
       }
     }
-    
+
     &-total-text {
       float: right;
       padding: 0 6px;
       line-height: 24px;
+      color: $N500;
     }
 
     &-options {
@@ -128,7 +129,7 @@
         vertical-align: top;
         height: 24px;
         line-height: 24px;
-        
+
         input {
           margin: 0 8px;
           width: 50px;
