--- a/src/components/Card/CardTitle/index.scss
+++ b/src/components/Card/CardTitle/index.scss
@@ -1,20 +1,20 @@
 @import '~scss/vars';
 
 .title{
-  padding-top: 24px;
-  line-height: 20px;
-  font-size: 16px;
+  padding: 32px 0 20px 0;
+  line-height: 1.25;
+  font-size: $font16;
   font-weight: bold;
-  color: $title-color;
+  color: $N500;
   &.fixTitle{
-    padding-top: 72px;
+    padding-top: 32px+$header-height;
   }
   .more{
     display: none;
     float: right;
     font-size: 12px;
     font-weight: normal;
-    color: $title-color;
+    color: $N200;
     cursor: pointer;
   }
   .show{
