--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -7,9 +7,8 @@ $profile-hover-color: #efe6f8;
   top: 0;
   width: 100%;
   height: $header-height;
-  background-image: linear-gradient(to left, #794db3, #854fb9 32%, #484999);
+  background-image: linear-gradient(to left, $P75, #854fb9 32%, #484999);
   z-index: 999;
-
   .wrapper {
     width: $content-width;
     margin: 0 auto;
@@ -25,30 +24,36 @@ $profile-hover-color: #efe6f8;
   }
 
   .search {
+    float: right;
     display: inline-block;
-    width: 360px;
-    margin-left: 91px;
+    min-width: 240px;
+    margin-right: 20px;
     margin-top: $header-height / 2;
     transform: translateY(-50%);
     vertical-align: top;
-    :global {
-      .icon {
-        color: #ffffff;
-      }
-    }
     input {
+      //width: 240px;
       color: rgba(#ffffff, 0.7);
       font-weight: 400;
       font-size: $size-normal;
       border-radius: 16px;
-      border: solid 1px rgba(#ffffff, 0.1);
+      border-color: transparent;
       background-color: rgba(#ffffff, 0.1);
+      transition: color .3s ease-in;
       &:focus{
-        border: solid 1px $border-dark;
+        width: 360px;
+        font-weight: normal;
+        color: $N0;
+
       }
       &::placeholder {
-        color: rgba(#ffffff, 0.5);
-        font-weight: 500;
+        //border: solid 1px rgba(#ffffff, 0.1);
+        color: $P45;
+      }
+    }
+    &:hover{
+      input{
+        border: solid 1px rgba(#ffffff, 0.5);
       }
     }
   }
@@ -57,7 +62,7 @@ $profile-hover-color: #efe6f8;
     float: right;
     line-height: $header-height;
     a {
-      padding: 5px 10px;
+      padding: 0 10px;
       border-radius: 12px;
       color: #fff;
       font-weight: 400;
@@ -70,23 +75,24 @@ $profile-hover-color: #efe6f8;
     }
 
     .profiles {
-      //width: 120px;
       min-width: 120px;
       margin-left: -70px;
-
       .profileItem {
-        line-height: 24px;
+        line-height: 32px;
         height: 32px;
         padding: 0;
         a{
           display: inline-block;
-          font-size: 14px;
-          line-height:24px;
+          padding: 0 12px;
           width: 100%;
-          color: $third-text-color;
+          line-height: 32px;
+          font-size: $font14;
+          color: $N300;
           border-radius: 0;
+          letter-spacing: 0;
           &:hover {
-            background: $profile-hover-color;
+            background: $P10;
+            color: $N500;
           }
         }
       }
