--- a/src/pages/Admin/Clusters/Detail/index.scss
+++ b/src/pages/Admin/Clusters/Detail/index.scss
@@ -1,85 +1,13 @@
 @import '~scss/vars';
 
-.wrapper {
-  position: relative;
-  width: $content-width;
-  margin: 0 auto 24px;
-  clear: both;
+.total{
+  padding-top: 16px;
+  font-size: 14px;
+  line-height: 2.0;
+  color: $N500;
+}
 
-  .leftInfo{
-    float: left;
-    width: 360px;
-  }
-  .rightInfo{
-    margin-left: 384px;
-  }
-  .detailOuter{
-    position: relative;
-    margin-bottom: 24px;
-    .operation{
-      position: absolute;
-      right: -35px;
-      top: 24px;
-      width: 135px;
-      text-align: center;
-      cursor: pointer;
-      i{
-        transform: rotate(90deg);
-      }
-    }
-  }
-  .total{
-    margin: 0 24px;
-    padding: 16px 0;
-    border-top: 1px solid $border-lighter;
-  }
-}
-.clear{
-  clear: both;
-}
-.wrapper2 {
-  position: relative;
-  width: 744px;
-  margin: 0 auto 24px;
-  background-color: #fff;
-  border-radius: 3px;
-  box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
-}
-.toolbar {
-  padding: 24px;
 
-  .select {
-    width: 176px;
-    vertical-align: top;
-
-    div {
-      box-shadow: none !important;
-    }
-  }
-}
-.search {
-  display: inline-block;
-  width: 337px;
-  border-color: $border-lighter;
-  box-shadow: none;
-
-  :global {
-    .fa {
-      color: $placeholder-color;
-    }
-  }
-
-  input::placeholder {
-    font-weight: 400;
-    color: $placeholder-color;
-  }
-}
-.buttonRight{
-  float: right;
-}
-.ml12{
-  margin-left: 12px;
-}
 .activities{
   margin: 24px 0;
   width: 360px;
