--- a/src/pages/Admin/Overview/AppList/index.scss
+++ b/src/pages/Admin/Overview/AppList/index.scss
@@ -3,8 +3,7 @@
 .appList{
   li{
     box-sizing: border-box;
-    margin-bottom: 13px;
-    padding: 13px 6px 9px 16px;
+    padding: 12px 18px 13px 16px;
     height: 60px;
     border-bottom: 1px solid $border-gray-li;
     &:hover{
@@ -17,11 +16,11 @@
   .order{
     display: inline-block;
     float: left;
-    width: 24px;
-    line-height: 32px;
-    font-size: 12px;
+    margin-right: 18px;
+    font-size: $font16;
     font-weight: 500;
-    color: $title-color;
+    line-height: 1.25;
+    color: $N500;
   }
   .total{
     display: inline-block;
@@ -41,7 +40,7 @@
       font-size: 12px;
       font-weight: 500;
       text-align: center;
-      color: $title-color;
+      color: $N500;
     }
   }
 }
