--- a/src/scss/partial/_icon.scss
+++ b/src/scss/partial/_icon.scss
@@ -14,8 +14,8 @@
   }
 
   .#{$icon-prefix}-coloured {
-    --primary-color: #00aa72;
-    --secondary-color: #90e0c5;
+    --primary-color: #6D35C3;
+    --secondary-color: #D3C4ED;
   }
 
   //.icon-changeable,
