--- a/src/components/UserInfo/TotalCard/index.scss
+++ b/src/components/UserInfo/TotalCard/index.scss
@@ -1,38 +1,37 @@
 @import "~scss/vars";
 
 .totalCard {
-  display: inline-block;
   box-sizing: border-box;
-  margin: 0 24px 24px 0;
   padding: 20px;
-  width: 168px;
   height: 120px;
   text-align: right;
   border-radius: 3px;
-  background-color: #fff;
+  background-color: $N0;
   box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
   cursor: pointer;
+  :global{
+    .icon{
+      float: left;
+    }
+  }
   &:last-child {
     margin-right: 0;
   }
   &:hover {
-    transform: translate3d(0, -5px, 0);
+    //transform: translate3d(0, -5px, 0);
     box-shadow: 0 2px 8px 0 rgba(48, 14, 86, 0.08), 0 2px 10px 0 rgba(48, 14, 86, 0.04), 0 6px 20px 0 rgba(48, 14, 86, 0.16), 0 0 16px 0 rgba(48, 14, 86, 0.04);
   }
   .name {
-    height: 24px;
+    line-height: 32px;
     font-size: 14px;
-    color: $purple-name;
-  }
-  img {
-    float: left;
+    color: $P75;
   }
   .number {
-    margin-top: 20px;
-    font-size: 36px;
+    margin-top: 4px;
+    font-size: $font40;
     font-weight: 500;
-    line-height: 1.0;
-    color: $title-color;
+    line-height: 1.1;
+    color: $N500;
   }
 }
 
