--- a/src/pages/Admin/Overview/index.scss
+++ b/src/pages/Admin/Overview/index.scss
@@ -1,23 +1,19 @@
 @import '~scss/vars';
 
-.listOuter{
-  height: 420px;
-  margin-bottom: 24px;
-}
 .userInfo{
-  margin: 40px auto;
+  margin: 40px auto 32px;
   text-align: center;
   .userName{
-    margin-bottom: 12px;
-    line-height: 14px;
-    font-size: 12px;
-    color: #626466;
+    margin-bottom: 8px;
+    font-size: 14px;
+    line-height: 1.71;
+    color: $N300;
   }
   .hello{
-    line-height: 32px;
-    font-size: 20px;
-    font-weight: bold;
-    color: $title-color;
+    font-size: 24px;
+    line-height: 1.17;
+    font-weight: 500;
+    color: $N500;
   }
 }
 
