--- a/src/components/Layout/Admin/CreateResource/index.scss
+++ b/src/components/Layout/Admin/CreateResource/index.scss
@@ -5,12 +5,9 @@
   width: $content-width;
 
   .leftInfo{
-    display: inline-block;
-    width: 744px;
-    border-radius: 3px;
-    background-color: #ffffff;
-    box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
-
+    border-radius: 2px;
+    background-color: $N0;
+    box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.07);
     .title{
       padding: 15px 24px 18px;
       line-height: 24px;
@@ -21,10 +18,6 @@
   }
 
   .rightInfo{
-    float: right;
-    width: 312px;
-    margin-right: 24px;
-
     .title{
       margin-bottom: 20px;
       line-height: 24px;
@@ -32,7 +25,6 @@
       font-weight: 500;
       color: #300e56;
     }
-
     .content{
       font-size: 14px;
       line-height: 1.43;
